--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,22 @@ html {
 	height: 100%;
 }
 
-body {
+body, #wrapper {
+	background-color: aliceblue;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	display: block;
 	height: 100%;
+	width: 100%;
+}
+
+#container
+{
+width: 960px;
+margin: 0 auto;
+}
+
+div {
+
 }
 
 .navbar {
@@ -22,7 +34,20 @@ body {
 	border: 3px;
 	border-style: none none solid none;
 	border-color: #777777;
-}
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+	}
+
+/* Change the color of links on hover */
+
+.navbar:hover {
+	background-color: #ddd;
+	color: black;
+	}
 
 #brand {
 	background-color: #4aaaa5;
